<resources>
    <string name="app_name">android-wanted-MovieReviewApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- home -->
    <string name="home_header_title_text">Wanted Movie</string>
    <string name="search">검색</string>
    <string name="share_content">공유하기</string>
    <string name="production_year">제작 연도</string>
    <string name="open_date">개봉일</string>
    <string name="genre">장르</string>
    <string name="show_detail">상세보기</string>

    <!-- review -->
    <string name="nick_name">닉네임</string>
    <string name="review">리뷰</string>
    <string name="image">이미지</string>
    <string name="password">암호</string>
    <string name="check">암호 재확인</string>
    <string name="save">Save</string>
    <string name="rating">평점</string>

    <!-- gallery -->
    <string name="gallery_dialog_done_text">완료</string>
    <string name="gallery_dialog_title_text">최근 항목</string>
    <string name="image_content_desc_text">이미지입니다.</string>
    <string name="camera_content_desc_text">카메라 촬영 버튼입니다.</string>
    <string name="image_add_btn_content_desc_text">이미지 추가 버튼입니다.</string>
    <string name="review_null_snack_bar_text">모든 값을 채워주세요</string>
    <string name="review_password_snack_bar_text">비밀번호가 다릅니다.</string>
    <string name="review_sucess_snack_bar_text">리뷰가 작성되었습니다.</string>
    <string name="run_time">상영 시간</string>
    <string name="watch_grade">심의 정보</string>
    <string name="audience_count">관객 수</string>
    <string name="director">감독</string>
    <string name="actor">출연 배우</string>


</resources>